Fixed tooltip sometimes cutting off

--- a/client/src/css/Telesession.css
+++ b/client/src/css/Telesession.css
@@ -4,7 +4,6 @@
 
 .Telesession {
   > .left-column {
-    overflow: visible;
     display: flex;
     flex-direction: column;
     flex: 1 1 auto;
